--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
   <h1 id="message">Привет мир</h1>
+  <p id="messageElement"></p>
   <button id="requestButton">Сделать запрос к серверу</button>
 
   <script>
