--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <script>
     document.addEventListener("DOMContentLoaded", function() {
-      const serverIP = '217.66.154.81'; // замените на реальный IP вашего сервера
+      const serverIP = '217.66.154.81'; // IP вашего сервера
       const requestButton = document.getElementById('requestButton');
       const messageElement = document.getElementById('message');
 
@@ -24,6 +24,11 @@
             console.error('Error:', error);
           });
       });
+    });
+  </script>
+</body>
+</html>
+
     });
   </script>
 </body>
